--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -46,7 +46,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="CfdiConnection"
-    connectionString="Data Source=.;Initial Catalog=CfdiDB;Integrated Security=true"
+    connectionString="Data Source=DADLAPTOP\SQLEXPRESS;Initial Catalog=CfdiDB;Integrated Security=true"
     providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
