added sig purcahse CRUD

--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -44,9 +44,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <!--   connectionString="Data Source=DADLAPTOP\SQLEXPRESS;Initial Catalog=CfdiDB;Integrated Security=true" -->
   <connectionStrings>
     <add name="CfdiConnection"
-    connectionString="Data Source=DADLAPTOP\SQLEXPRESS;Initial Catalog=CfdiDB;Integrated Security=true"
+    connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;"
     providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
