--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -19,6 +19,11 @@
     </compilers>
   </system.codedom>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+      </customHeaders>
+    </httpProtocol>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -44,10 +49,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <!--   connectionString="Data Source=DADLAPTOP\SQLEXPRESS;Initial Catalog=CfdiDB;Integrated Security=true" -->
+  <!--   connectionString="Data Source=DADLAPTOP\SQLEXPRESS;Initial Catalog=CfdiDB;Integrated Security=true"
+  connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" -->
   <connectionStrings>
     <add name="CfdiConnection"
-    connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;"
+         connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;"
+    
     providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
