--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -21,12 +21,16 @@
   <system.webServer>
     <httpProtocol>
       <customHeaders>
+        <clear />
         <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Methods" value="GET,PUT,POST,DELETE,OPTIONS" />
+        <add name="Access-Control-Allow-Headers" value="Content-Type" />
       </customHeaders>
     </httpProtocol>
     <handlers>
+      <remove name="WebDAV" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
+      <!--<remove name="OPTIONSVerbHandler" /> -->
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
@@ -52,10 +56,7 @@
   <!--   connectionString="Data Source=DADLAPTOP\SQLEXPRESS;Initial Catalog=CfdiDB;Integrated Security=true"
   connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" -->
   <connectionStrings>
-    <add name="CfdiConnection"
-         connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;"
-    
-    providerName="System.Data.SqlClient"/>
+    <add name="CfdiConnection" connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
 </configuration>
