--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -19,6 +19,19 @@
     </compilers>
   </system.codedom>
   <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="AngularJS Routes" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_URI}" pattern=".*/api" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/nomisign/index.html" />
+        </rule>
+      </rules>
+    </rewrite>
     <httpProtocol>
       <customHeaders>
         <clear />
@@ -41,6 +54,10 @@
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -54,9 +71,20 @@
     </providers>
   </entityFramework>
   <!--   connectionString="Data Source=DADLAPTOP\SQLEXPRESS;Initial Catalog=CfdiDB;Integrated Security=true"
+  connectionString="Data Source=EC2AMAZ-U15Q2F2;Initial Catalog=nomisignprod1;User ID=NomisignSystem;Password=markmaria;"
   connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" -->
   <connectionStrings>
-    <add name="CfdiConnection" connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" providerName="System.Data.SqlClient" />
+    <add name="CfdiConnection"  connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  
+  <appSettings>
+    <add key="useSSL" value="false"/>
+    <!--Used for sending SMS and email notifications
+    
+    private const string httpRootpath = "C:\\inetpub\\wwwroot\\nomiadmin\\";
+        //private const string httpRootpath = "e:\\web\\ogreancom00\\htdocs\\nomisign\\";
+        -->
+    <add key="signingAppDomain" value="localhost:4200"/>
+    <!-- No \ at end of rootDiskPath.  Also no \ at start or end of System Path in DB -->
+    <add key="rootDiskPath" value="C:\nomisign.docs" />
+  </appSettings>
 </configuration>
