--- a/CfdiService/CfdiService/CfdiService.csproj
+++ b/CfdiService/CfdiService/CfdiService.csproj
@@ -55,6 +55,9 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\..\..\..\Documents\Visual Studio 2015\Projects\Hash_Passwords\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -146,6 +149,7 @@
   <ItemGroup>
     <Compile Include="Controllers\CompaniesController.cs" />
     <Compile Include="Controllers\DocumentController.cs" />
+    <Compile Include="Controllers\EmployeeSecurityQuestionController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\SignaturePurchaseController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
@@ -160,6 +164,7 @@
     <Compile Include="Model\Company.cs" />
     <Compile Include="Model\Document.cs" />
     <Compile Include="Model\Employee.cs" />
+    <Compile Include="Model\EmployeeSecurityQuestions.cs" />
     <Compile Include="Model\SignaturePurchase.cs" />
     <Compile Include="Model\SystemSettings.cs" />
     <Compile Include="Model\User.cs" />
@@ -182,6 +187,7 @@
     <Compile Include="Shapes\EmployeeShape.cs" />
     <Compile Include="Shapes\UserShape.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Strings.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
