digital signing changes

--- a/CfdiUpload/CfdiUpload/App.config
+++ b/CfdiUpload/CfdiUpload/App.config
@@ -16,7 +16,7 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="CfdiServiceUrl" value="http://localhost:10699/" />
+    <add key="CfdiServiceUrl" value="http://localhost/nomisign/" />
     <add key="CfdiServiceKey" value="9e7de7dd-693e-443f-a5db-038902aab502" />
     <add key="CompanyId" value="1" />
     <add key="CompanyRfc" value="AMS1006185U6" />
