--- a/CfdiService/CfdiService/CfdiService.csproj
+++ b/CfdiService/CfdiService/CfdiService.csproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ClientController.cs" />
+    <Compile Include="Controllers\ClientUserController.cs" />
     <Compile Include="Controllers\CompaniesController.cs" />
     <Compile Include="Controllers\DocumentController.cs" />
     <Compile Include="Controllers\EmployeeSecurityQuestionController.cs" />
@@ -172,6 +173,7 @@
     <Compile Include="Model\SystemSettings.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DigitalSignatures.cs" />
     <Compile Include="Services\EncryptionService.cs" />
     <Compile Include="Services\FileAccess.cs" />
     <Compile Include="Services\SendEmail.cs" />
