--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -96,13 +96,27 @@
   </connectionStrings>
   <appSettings>
     <add key="useSSL" value="false"/>
-    <!--Used for sending SMS and email notifications
-    
-    private const string httpRootpath = "C:\\inetpub\\wwwroot\\nomiadmin\\";
-        //private const string httpRootpath = "e:\\web\\ogreancom00\\htdocs\\nomisign\\";
-        -->
+    <!--Used for sending SMS and email notifications -->
     <add key="signingAppDomain" value="localhost:4200"/>
-    <!-- No \ at end of rootDiskPath.  Also no \ at start or end of System Path in DB -->
+    <!-- No \ at end of rootDiskPath.  Also no \ at start or end of System Path in DB 
+    this is the root where files paths are started from-->
     <add key="rootDiskPath" value="C:\nomisign.docs" />
+    <!-- only used for first time setup of new database.  USername is manager@nomisign.com password is password123 -->
+    <add key="allowDefaultAdmin" value="False" />
+    <!-- FIle used to Sign PDF docs when employee accepts -->
+    <add key="pfxFileName" value="PDFTest_TemporaryKey.pfx" />
+    <!-- Password for PFX signing cert -->
+    <add key="pfxFilePassword" value="RQP@ssw0rd" />
+    <!-- email config.  from address & account for logging into server.  from address and email account address can be the same-->
+    <add key="emailSmtpAddress" value="smtp.gmail.com" />
+    <add key="emailSmtpPortNumber" value="587" />
+    <add key="emailAccount" value="tmogrean@gmail.com" />
+    <add key="emailAccountPassword" value="maryjo22" />
+    <add key="emailFromAddress" value="tmogrean@gmail.com" />
+    <add key="alwaysAddTed" value="True" />
+    <!-- twillio (SMS) settings -->
+    <add key="accountSID" value="AC7d4cbd0f3db4469d6987ea846fb5b234" />
+    <add key="accountAuthToken" value="a8407e9400297d0197feb63fc40380d0" />
+    <add key="fromPhoneNumber" value="+12162085984" />
   </appSettings>
 </configuration>
