several changes : Can you work on: A) copy the file. - we do not need to send both copies to hash thing, but we should save the “signed copy” twice.
B) want to make sure that we are counting the signatures.
Counting number of docs signed so they can bill.

C) when you look at the list of companies.
Could we display

Signatures purchased: signatures used:

--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -109,10 +109,10 @@
     <add key="pfxFilePassword" value="RQP@ssw0rd" />
     <!-- email config.  from address & account for logging into server.  from address and email account address can be the same-->
     <add key="emailSmtpAddress" value="smtp.gmail.com" />
-    <add key="emailSmtpPortNumber" value="587" />
-    <add key="emailAccount" value="tmogrean@gmail.com" />
-    <add key="emailAccountPassword" value="maryjo22" />
-    <add key="emailFromAddress" value="tmogrean@gmail.com" />
+    <add key="emailSmtpPortNumber" value="587" /> <!--default for gmail, put in fig incase other service used -->
+    <add key="emailAccount" value="listo-para-firma@nomisign.com" />
+    <add key="emailAccountPassword" value="NOMISIGNadmin()" />
+    <add key="emailFromAddress" value="listo-para-firma@nomisign.com" />
     <add key="alwaysAddTed" value="True" />
     <!-- twillio (SMS) settings -->
     <add key="accountSID" value="AC7d4cbd0f3db4469d6987ea846fb5b234" />
