--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <log4net>
     <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
@@ -65,6 +65,11 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+        <security>
+            <requestFiltering>
+                <requestLimits maxAllowedContentLength="1000000000" />
+            </requestFiltering>
+        </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -92,12 +97,12 @@
   connectionString="Data Source=EC2AMAZ-U15Q2F2;Initial Catalog=nomisignprod1;User ID=NomisignSystem;Password=markmaria;"
   connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" -->
   <connectionStrings>
-    <add name="CfdiConnection"  connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" providerName="System.Data.SqlClient" />
+    <add name="CfdiConnection" connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="useSSL" value="false"/>
+    <add key="useSSL" value="false" />
     <!--Used for sending SMS and email notifications -->
-    <add key="signingAppDomain" value="localhost:4200"/>
+    <add key="signingAppDomain" value="localhost:4200" />
     <!-- No \ at end of rootDiskPath.  Also no \ at start or end of System Path in DB 
     this is the root where files paths are started from-->
     <add key="rootDiskPath" value="C:\nomisign.docs" />
