--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -109,9 +109,11 @@
     <!-- only used for first time setup of new database.  USername is manager@nomisign.com password is password123 -->
     <add key="allowDefaultAdmin" value="False" />
     <!-- FIle used to Sign PDF docs when employee accepts -->
-    <add key="pfxFileName" value="PDFTest_TemporaryKey.pfx" />
+    <!-- <add key="pfxFileName" value="PDFTest_TemporaryKey.pfx" /> -->
+    <add key="pfxFileName" value="NomisignTestCert.pfx" />
     <!-- Password for PFX signing cert -->
-    <add key="pfxFilePassword" value="RQP@ssw0rd" />
+    <!--<add key="pfxFilePassword" value="RQP@ssw0rd" /> -->
+    <add key="pfxFilePassword" value="Nomisign1" />
     <!-- email config.  from address & account for logging into server.  from address and email account address can be the same-->
     <add key="emailSmtpAddress" value="smtp.gmail.com" />
     <add key="emailSmtpPortNumber" value="587" /> <!--default for gmail, put in fig incase other service used -->
