--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -121,14 +121,14 @@
     <add key="allowDefaultAdmin" value="False"/>
     <!-- FIle used to Sign PDF docs when employee accepts -->
     <!-- <add key="pfxFileName" value="PDFTest_TemporaryKey.pfx" /> -->
-    <!--<add key="pfxFileName" value="NomisignTestCert.pfx" /> -->
+    <add key="pfxFileName" value="NomisignTestCert.pfx" />
     <!-- Password for PFX signing cert -->
     <!--<add key="pfxFilePassword" value="RQP@ssw0rd" /> -->
-    <!--<add key="pfxFilePassword" value="Nomisign1" /> -->
+    <add key="pfxFilePassword" value="Nomisign1" />
     <!--<add key="pfxFileName" value="NomisignTestCert.pfx" />
     <add key="pfxFilePassword" value="Nomisign1" /> -->
-    <add key="pfxFileName" value="nomisign.pfx"/>
-    <add key="pfxFilePassword" value="N0M1secure750"/>
+    <!--<add key="pfxFileName" value="nomisign.pfx"/>
+    <add key="pfxFilePassword" value="N0M1secure750"/> -->
     <!-- email config.  from address & account for logging into server.  from address and email account address can be the same-->
     <add key="emailSmtpAddress" value="smtp.gmail.com"/>
     <add key="emailSmtpPortNumber" value="587"/>
