Download Zip File Changes

--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -113,6 +113,8 @@
     <!-- No \ at end of rootDiskPath.  Also no \ at start or end of System Path in DB 
     this is the root where files paths are started from-->
     <add key="rootDiskPath" value="C:\nomisign.docs"/>
+    <!--this is the root where the zip files will be temporary stored..-->
+    <add key="tempZipFolder" value="C:\inetpub\wwwroot\nomiadmin\Nomisign_Files1\TempZips"/>
     <!--this is the root where company cert files will be stored.-->
     <add key="companiesCertsPath" value="C:\Certificates\Companies"/>
     <!--this is the root where employee cert files will be stored-->
