--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -103,13 +103,15 @@
   connectionString="Data Source=EC2AMAZ-U15Q2F2;Initial Catalog=nomisignprod1;User ID=NomisignSystem;Password=markmaria;"
   connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" -->
   <connectionStrings>
-    <add name="Data Source=LMENDOZA\NSSQLSERVER;Initial Catalog=NomisignProd;User ID=sa;Password=1234;"/>
+    <add name="CfdiConnection" connectionString="Data Source=LAPTOP-OH6RDBHC\SQLEXPRESS;Initial Catalog=nomisignprod1;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <!--<add name="Data Source=LMENDOZA\NSSQLSERVER;Initial Catalog=NomisignProd;User ID=sa;Password=1234;"/>-->
     <!--<add name="CfdiConnection" connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
     <add key="useSSL" value="false"/>
     <!--Used for sending SMS and email notifications -->
-    <add key="signingAppDomain" value="localhost:4200"/>
+    <!--<add key="signingAppDomain" value="localhost:4200"/>-->
+    <add key="signingAppDomain" value="app.nomisign.com:4200"/>
     <!-- No \ at end of rootDiskPath.  Also no \ at start or end of System Path in DB 
     this is the root where files paths are started from-->
     <add key="rootDiskPath" value="C:\nomisign.docs"/>
