--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -103,8 +103,8 @@
   connectionString="Data Source=EC2AMAZ-U15Q2F2;Initial Catalog=nomisignprod1;User ID=NomisignSystem;Password=markmaria;"
   connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" -->
   <connectionStrings>
-    <add name="CfdiConnection" connectionString="Data Source=LAPTOP-OH6RDBHC\SQLEXPRESS;Initial Catalog=nomisignprod1;Integrated Security=True;" providerName="System.Data.SqlClient"/>
-    <!--<add name="Data Source=LMENDOZA\NSSQLSERVER;Initial Catalog=NomisignProd;User ID=sa;Password=1234;"/>-->
+    <!--<add name="CfdiConnection" connectionString="Data Source=LAPTOP-OH6RDBHC\SQLEXPRESS;Initial Catalog=nomisignprod1;Integrated Security=True;" providerName="System.Data.SqlClient"/>-->
+    <add name="CfdiConnection" connectionString="Data Source=LMENDOZA\NSSQLSERVER;Initial Catalog=NomisignProd;User ID=sa;Password=1234;" providerName="System.Data.SqlClient"/>
     <!--<add name="CfdiConnection" connectionString="Data Source=tcp:sql2k5101.discountasp.net;Initial Catalog=SQL2005_122974_data;User ID=SQL2005_122974_data_user;Password=maryjo;" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
