Changes made on SMS and Email texts.

--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -111,7 +111,7 @@
     <add key="useSSL" value="false"/>
     <!--Used for sending SMS and email notifications -->
     <!--<add key="signingAppDomain" value="localhost:4200"/>-->
-    <add key="signingAppDomain" value="app.nomisign.com:4200"/>
+    <add key="signingAppDomain" value="dev.nomisign.com:4200"/>
     <!-- No \ at end of rootDiskPath.  Also no \ at start or end of System Path in DB 
     this is the root where files paths are started from-->
     <add key="rootDiskPath" value="C:\nomisign.docs"/>
