--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -35,6 +35,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.1"/>
     <httpRuntime targetFramework="4.5.2"/>
+    <urlMappings enabled="true">
+      <add url="~/document-handler/viewer.cshtml" mappedUrl="~/DocumentHandler.ashx"/>
+    </urlMappings>
+
   </system.web>
   <system.codedom>
     <compilers>
@@ -51,6 +55,7 @@
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
             <add input="{REQUEST_URI}" pattern=".*/api" negate="true"/>
+            <add input="{REQUEST_URI}" pattern=".*/document-handler" negate="true"/>
           </conditions>
           <action type="Rewrite" url="/nomisign/index.html"/>
         </rule>
