--- a/CfdiService/CfdiService/CfdiService.csproj
+++ b/CfdiService/CfdiService/CfdiService.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Services\DigitalSignatures.cs" />
     <Compile Include="Services\EncryptionService.cs" />
     <Compile Include="Services\FileAccess.cs" />
+    <Compile Include="Services\FullNameSplitterFromRFCService.cs" />
     <Compile Include="Services\Nom151Service.cs" />
     <Compile Include="Services\SendEmail.cs" />
     <Compile Include="Services\SendSMS.cs" />
