--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -66,7 +66,7 @@
         <clear/>
         <add name="Access-Control-Allow-Origin" value="*"/>
         <add name="Access-Control-Allow-Methods" value="GET,PUT,POST,DELETE,OPTIONS"/>
-        <add name="Access-Control-Allow-Headers" value="Content-Type"/>
+        <add name="Access-Control-Allow-Headers" value="Content-Type,Authorization,ClientType"/>
       </customHeaders>
     </httpProtocol>
     <handlers>
