--- a/CfdiUpload/CfdiUpload/App.config
+++ b/CfdiUpload/CfdiUpload/App.config
@@ -16,9 +16,11 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="CfdiServiceUrl" value="http://localhost/nomisign/" />
-    <add key="CfdiServiceKey" value="9e7de7dd-693e-443f-a5db-038902aab502" />
-    <add key="CompanyId" value="1" />
-    <add key="CompanyRfc" value="AMS1006185U6" />
+    <add key="MANAGER" value="MANAGER" />
+    <add key="PASSWORD" value="PASSWORD" />
+    <add key="CfdiServiceUrl" value="http://dev.nomisign.com/nomiadmin" />
+    <add key="CfdiServiceKey" value="b4d2c6e2-810a-49e8-843e-1970de75cbac" />
+    <add key="CompanyId" value="10" />
+    <add key="CompanyRfc" value="ART907817KK2" />
   </appSettings>
 </configuration>
