--- a/CfdiUpload/CfdiUpload/packages.config
+++ b/CfdiUpload/CfdiUpload/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="1.6.2" targetFramework="net40" developmentDependency="true" />
+  <package id="Fody" version="2.0.0" targetFramework="net40" developmentDependency="true" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
