Security questions, login/reset method changes.

--- a/CfdiService/CfdiService/CfdiService.csproj
+++ b/CfdiService/CfdiService/CfdiService.csproj
@@ -48,9 +48,8 @@
     <Reference Include="Aspose.Pdf">
       <HintPath>Libraries\Aspose.Pdf.dll</HintPath>
     </Reference>
-    <Reference Include="BouncyCastle.Crypto, Version=1.8.1.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\DLL\DLL\BouncyCastle.Crypto.dll</HintPath>
+    <Reference Include="BouncyCastle.Crypto">
+      <HintPath>..\..\..\NomiSign\LibreriasNOM151Net\bin\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
     <Reference Include="DocuSign">
       <HintPath>..\..\..\NomiSign\LibreriasNOM151Net\bin\DocuSign.dll</HintPath>
@@ -90,7 +89,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="NOM151">
-      <HintPath>..\..\..\..\..\Downloads\DLL\DLL\NOM151.dll</HintPath>
+      <HintPath>..\..\..\NomiSign\LibreriasNOM151Net\bin\NOM151.dll</HintPath>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -217,6 +216,7 @@
     <Compile Include="Shapes\DocumentShape.cs" />
     <Compile Include="Shapes\DocumentListShape.cs" />
     <Compile Include="Shapes\EmployeeListShape.cs" />
+    <Compile Include="Shapes\SecurityAnswers.cs" />
     <Compile Include="Shapes\SignaturePurchaseShape.cs" />
     <Compile Include="Shapes\SignaturePurchaseListShape.cs" />
     <Compile Include="Shapes\UserListShape.cs" />
