Added Nom151-2017 ServiceReference. Created class NOM1512017Service to call method. Modified Upload app to work insted of the current directory in the directory where the assembly is. Created .bat file.

--- a/CfdiService/CfdiService/Web.config
+++ b/CfdiService/CfdiService/Web.config
@@ -162,12 +162,19 @@
           <security mode="Transport" />
         </binding>
         <binding name="ServiceSoap1" />
+        <binding name="WebServiceSoap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="WebServiceSoap1" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="https://nom151.advantage-security.com:909/nomws/service.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
         contract="ReachcoreService.ServiceSoap" name="ServiceSoap" />
+      <endpoint address="https://pilot-psc.reachcore.com/wsnom151/webservice.asmx"
+        binding="basicHttpBinding" bindingConfiguration="WebServiceSoap"
+        contract="ServiceReference1.WebServiceSoap" name="WebServiceSoap" />
     </client>
   </system.serviceModel>
 </configuration>
