Several changes on emails and http/https prefixes on all parts of the code to be a configuration item. Added method to register new employees emails and phones though a csv file.

--- a/CfdiService/CfdiService/CfdiService.csproj
+++ b/CfdiService/CfdiService/CfdiService.csproj
@@ -84,6 +84,7 @@
     <Reference Include="Microsoft.Owin.Host.SystemWeb">
       <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.3.1.0\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -191,7 +192,7 @@
     <Content Include="packages.config" />
     <Content Include="DocumentHandler.ashx" />
     <None Include="Connected Services\ReachcoreService\service.wsdl" />
-    <None Include="Connected Services\ServiceReference1\webservice.wsdl" />
+    <None Include="Connected Services\ServiceReference1\webservice1.wsdl" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
