--- a/CfdiUpload/CfdiUpload/App.config
+++ b/CfdiUpload/CfdiUpload/App.config
@@ -16,7 +16,7 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="CfdiServiceUrl" value="http://dev.nomisign.com/nomiadmin/" />
+    <add key="CfdiServiceUrl" value="http://dev.nomisign.com/nomiservice/" />
     <add key="CfdiServiceKey" value="b4d2c6e2-810a-49e8-843e-1970de75cbac" />
     <add key="CompanyId" value="10" />
     <add key="CompanyRfc" value="ART907817KK2" />
